Fix all DM_NUMBER_CTOR FindBugs issues.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbcp/branches/DBCP_1_4_x_BRANCH@1485405 13f79535-47bb-0310-9956-ffa450edef68